# altparser

./: .gitignore  CMakeLists.txt  README.md  build.sh
Lib/: CMakeLists.txt
Lib/Src/: differ.cpp  differ.h  download.cpp  download.h  package.cpp  package.h  version.cpp  version.h
Src/: CMakeLists.txt  main.cpp
Src/Cli/: cli.cpp  cli.h  help.cpp  help.h
